--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -383,12 +383,18 @@ Our justification for proposing Eqn.~(\ref{eqn:basic_relation}) is three-fold.
 We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$, for an $N\times M$ random matrix $\mathbf{W}^{rand}(\mu)$ (with $N=M$, or $Q=1$, for simplicity).
 \item
 \label{enum:second}
-We observe empirically that multiplying $\alpha$ by $\log\lambda_{max}$ leads to a relation that increases nearly linearly with $\log\Vert\mathbf{W}\Vert^{2}_{F}$ for a random HT matrix $\mathbf{W}^{rand}(\mu)$  and that is linearly \nred{and positively} correlated for real a DNN weight matrix $\mathbf{W}$. 
-%This is precisely what we want for our simple HT-based complexity metric.
+Because the MHT Universality class behaves \emph{like} the VHT Universality class at finite sizes, we show that we can
+extend this relation to larger exponents, both across the VHT Universality class, $\mu\in(1,2)$, and into the \emph{finite-sized} MHT Universality class, $\mu\in(2,4)$, 
+where it applies for the finite-size weight matrices $\mathbf{W}^{rand}(\mu)$ . For  $N\sim\mathcal{O}(100-1000)$,
+$\alpha\;\log\lambda_{max}$  \nred{increases nearly linearly}  with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$  as $\mu$ increases.
+For larger $N$, the relation saturates for large $\mu$.
 \item
 \label{enum:third}
-\emph{Based on \nred{Heavy Tailed Mechanistic }Universality (HT-MU)}, we expect this result to extend to larger exponents, both across the VHT Universality class, $\alpha\in(1,2)$, and into the \emph{finite-sized} MHT Universality class, $\alpha\in(2,4)$, where it applies for the finite-size weight matrices in DNNs.
+\emph{As evidence of \nred{Heavy Tailed Mechanistic} Universality (HT-MU)}, we observe empirically that this simple relation also applies to the real
+ DNN weight matrices $\mathbf{W}$. We see that $\alpha\;\log\lambda_{max}$ 
+   \nred{is positively} correlated with $\log\Vert\mathbf{W}\Vert^{2}_{F}$  as $\alpha$  increases, and even shows similar saturation effects at large $\alpha$.
 \end{enumerate}
+
 We will discuss each of these in more detail below.
 
 Finally, based on Eqn.~(\ref{eqn:basic_relation}), we choose the weights in Eqn.~(\ref{eqn:alpha_hat_generic}) to be the log of the corresponding maximum eigenvalues of $\mathbf{X}$, i.e., for a given $l,i$, we have 
