--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -383,10 +383,10 @@ Our justification for proposing Eqn.~(\ref{eqn:basic_relation}) is three-fold.
 We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$, for an $N\times M$ random matrix $\mathbf{W}^{rand}(\mu)$ (with $N=M$, or $Q=1$, for simplicity).
 \item
 \label{enum:second}
-Because the MHT Universality class behaves \emph{like} the VHT Universality class at finite sizes, we show that we can
-extend this relation to larger exponents, both across the VHT Universality class, $\mu\in(1,2)$, and into the \emph{finite-sized} MHT Universality class, $\mu\in(2,4)$, 
-where it applies for the finite-size weight matrices $\mathbf{W}^{rand}(\mu)$ . For  $N\sim\mathcal{O}(100-1000)$,
-$\alpha\;\log\lambda_{max}$  \nred{increases nearly linearly}  with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$  as $\mu$ increases.
+For finite size random matrices $\mathbf{W}^{rand}(\mu)$, the MHT Universality class, $\mu\in(2,4)$,  behaves \emph{llike} the VHT Universality , $\mu\in(1,2)$.
+(see section XXX)
+Because of this similarity, we show we can extend Eqn.~(\ref{eqn:basic_relation})  to larger PL exponents.
+For  $N\sim\mathcal{O}(100-1000)$, $\alpha\;\log\lambda_{max}$  \nred{increases nearly linearly}  with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$  as $\mu$ increases.
 For larger $N$, the relation saturates for large $\mu$.
 \item
 \label{enum:third}
