--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -384,14 +384,14 @@ We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL e
 \item
 \label{enum:second}
 For finite size random matrices $\mathbf{W}^{rand}(\mu)$, the MHT Universality class, $\mu\in(2,4)$,  behaves \emph{llike} the VHT Universality , $\mu\in(1,2)$.
-(see section XXX)
-Because of this similarity, we show we can extend Eqn.~(\ref{eqn:basic_relation})  to larger PL exponents.
+(see section XXX). 
+Because of this similarity, we show we can extend Eqn.~(\ref{eqn:basic_relation}) , approximately, to larger PL exponents.
 For  $N\sim\mathcal{O}(100-1000)$, $\alpha\;\log\lambda_{max}$  \nred{increases nearly linearly}  with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$  as $\mu$ increases.
-For larger $N$, the relation saturates for large $\mu$.
+For larger $N$, the relation saturates for large $\mu$.  
 \item
 \label{enum:third}
-\emph{As evidence of \nred{Heavy Tailed Mechanistic} Universality (HT-MU)}, we observe empirically that this simple relation also applies to the real
- DNN weight matrices $\mathbf{W}$. We see that $\alpha\;\log\lambda_{max}$ 
+\emph{As evidence of \nred{Heavy Tailed Mechanistic} Universality (HT-MU)}, we observe empirically that the PL-Norm (Eqn.~(\ref{eqn:basic_relation})  relation also 
+applies, approximately, to the real DNN weight matrices $\mathbf{W}$. We see that $\alpha\;\log\lambda_{max}$ 
    \nred{is positively} correlated with $\log\Vert\mathbf{W}\Vert^{2}_{F}$  as $\alpha$  increases, and even shows similar saturation effects at large $\alpha$.
 \end{enumerate}
 
