--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -369,7 +369,7 @@ To our knowledge, this is the first time this PL--Norm relation has been noted i
 A few comments on Eqn.~(\ref{eqn:basic_relation}).
 First, it provides a connection between the PL parameter $\alpha$ of HT-SR Theory and the weight norm $\Vert\mathbf{W}\Vert^{2}_{F}$ of more traditional statistical learning theory.
 Second, it has the form of the well-known Hausdorff dimension~\cite{Sch07}.
-Third, it shows that the fitted PL exponent can alternatively be interpreted as (up to the $\frac{1}{N}$ scaling) approximately the Stable Rank in Log-Units:
+Third, it shows that the fitted PL exponent can alternatively be interpreted (up to the $\frac{1}{N}$ scaling) \nred{as} the Stable Rank in Log-Units:
 $$
 \mbox{Log-Units Stable Rank:} 
 \quad
